use String.formatted()